[project]
name = "langchain-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.1",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
]
